Move snippets to dedicated components

--- a/components/button/snippets/sizes.mdx
+++ b/components/button/snippets/sizes.mdx
@@ -42,7 +42,7 @@ const colors = {
   indigo: `bg-indigo-900 focus:ring-2 focus:ring-offset-2 focus:ring-indigo-900 focus:ring-offset-indigo-100`,
 };
 
-/* You can adjust the size of the buttons according to your preference*/
+/* You can adjust the size of the snippets according to your preference*/
 const sizes = {
   sm: 'px-6 py-1 text-sm',
   md: 'px-6 py-2',
