Fix code snippets and refactor dropdown examples

--- a/components/curtain-menu/snippets/left.mdx
+++ b/components/curtain-menu/snippets/left.mdx
@@ -12,7 +12,7 @@ export const CurtainMenuPage = () => {
     <>
       <button
         onClick={toggle}
-        className="text-white focus:outline-none shadow m-1.5 rounded px-6 py-2 font-medium transition ease-in duration-200 bg-indigo-900"
+        className="text-white focus:outline-none shadow m-1.5 rounded px-6 py-2 font-medium transition ease-in duration-200 bg-black"
       >
         Open
       </button>
