--- a/website/tailwindConfig.mdx
+++ b/website/tailwindConfig.mdx
@@ -10,9 +10,9 @@ module.exports = {
       animation: {
         left: 'left 0.3s',
         right: 'right 0.3s',
-        'modal-right': 'snippets-right 0.3s',
-        'modal-top': 'snippets-top 0.3s',
-        'modal-left': 'snippets-left 0.3s',
+        'modal-right': 'modal-right 0.3s',
+        'modal-top': 'modal-top 0.3s',
+        'modal-left': 'modal-left 0.3s',
       },
       keyframes: {
         left: {
