--- a/components/ecommerce/snippets/pricing-table.mdx
+++ b/components/ecommerce/snippets/pricing-table.mdx
@@ -84,10 +84,10 @@ export const PricingTable = () => {
   );
 };
 
-const Price = ({ children }) => <div className="row mb-6">{children}</div>;
+const Price = ({ children }) => <div className="flex mb-6">{children}</div>;
 
 Price.Group = ({ children, title, titleBackground }) => (
-  <div className="col-12 md:col-4 mb-6 md:mb-0">
+  <div className="w-full md:w-4/12 p-2 mb-6 ">
     <ul className="border border-solid border-gray-400 m-0 p-0 transition-all duration-300 ease-linear">
       <li
         className={`${titleBackground} text-2xl text-center p-5 border-b border-gray-300 text-white`}
