update collapse example and snippets

--- a/packages/collapse/snippets/index.mdx
+++ b/packages/collapse/snippets/index.mdx
@@ -2,8 +2,8 @@
 import { useState, useRef } from 'react';
 
 export const CollapsePage = () => (
-  <div className="flex flex-wrap mt-12 ">
-    <div className="w-full md:w-4/12 mb-6 md:mb-0 md:p-3 ">
+  <div className="flex flex-wrap mb-4">
+    <div className="mr-5">
       <Collapse title="Click to see me" btnClassName="bg-blue-700">
         <h2>Next.js</h2>
         <h3>React</h3>
@@ -11,14 +11,14 @@ export const CollapsePage = () => (
         <h5>Chakra-UI</h5>
       </Collapse>
     </div>
-    <div className="w-full md:w-4/12 mb-6 md:mb-0 md:p-3 ">
+    <div className="mr-5">
       <Collapse title="Click to see me" btnClassName="bg-green-700">
         <h2>Tailwindcss</h2>
         <h3>Vercel</h3>
         <h4>Docker</h4>
       </Collapse>
     </div>
-    <div className="w-full md:w-4/12 mb-6 md:mb-0 md:p-3 ">
+    <div className="mr-5">
       <Collapse title="Click to see me" btnClassName="bg-indigo-900">
         <h1>Netlify</h1>
         <h2>Typescript</h2>
