feat: Rewrite Dropdown Component
- Improve accessibility
- Remove unnecessary tags
- Update examples and snippets

--- a/packages/dropdown/snippets/basic.mdx
+++ b/packages/dropdown/snippets/basic.mdx
@@ -4,9 +4,22 @@ import { useEffect, useRef, useState } from 'react';
 export const DropdownPage = () => (
   <Dropdown>
     <Dropdown.Toggle>
-      <button className="bg-black text-white focus:outline-none shadow rounded px-6 py-2 font-medium">
-        Click on me
-      </button>
+      <span className="flex">
+        Options
+        <svg
+          className="-mr-1 ml-2 h-5 w-5"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+          aria-hidden="true"
+        >
+          <path
+            fillRule="evenodd"
+            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+            clipRule="evenodd"
+          />
+        </svg>
+      </span>
     </Dropdown.Toggle>
     <Dropdown.Menu>
       <Dropdown.Item>Enoch Ndika</Dropdown.Item>
@@ -16,13 +29,7 @@ export const DropdownPage = () => (
   </Dropdown>
 );
 
-const Dropdown = ({ children }) => {
-  /* First child contains the dropdown toggle */
-  const firstChild = children[0];
-
-  /* Second child contains the dropdown menu with his children */
-  const secondChild = children[1];
-
+const useToggle = () => {
   const [show, setShow] = useState(false);
   const ref = useRef(null);
 
@@ -53,34 +60,64 @@ const Dropdown = ({ children }) => {
     return () => document.removeEventListener('keyup', handleEscape);
   }, [show]);
 
+  return {
+    show,
+    toggle,
+    ref,
+  };
+};
+
+const Dropdown = ({ children }) => {
+  const { show, toggle } = useToggle();
+  /* First child contains the dropdown toggle */
+  const dropdownToggle = children[0];
+
+  /* Second child contains the dropdown menu */
+  const dropdownMenu = children[1];
+
   return (
-    <div>
-      <div onClick={toggle} className="inline">
-        {firstChild}
-      </div>
-      {show && (
-        <div className="relative block" ref={ref}>
-          {secondChild}
-        </div>
-      )}
-    </div>
+    <>
+      <button
+        onClick={toggle}
+        type="button"
+        className="bg-indigo-900 text-white focus:outline-none shadow rounded px-6 py-2 font-medium"
+        id="options-menu"
+        aria-expanded="true"
+        aria-haspopup="true"
+      >
+        {dropdownToggle}
+      </button>
+      {show && <>{dropdownMenu}</>}
+    </>
   );
 };
 
 Dropdown.Toggle = ({ children }) => <>{children}</>;
 
-Dropdown.Menu = ({ children }) => (
-  <div
-    style={{ transform: 'translate3d(0px, 3px, 0px)' }}
-    className="block z-30 absolute top-0 left-0  bg-white float-left py-2 px-0 text-left border border-gray-300 rounded-sm mt-0.5 mb-0 mx-0 bg-clip-padding"
+Dropdown.Menu = ({ children }) => {
+  return (
+    <div className="relative">
+      <div
+        style={{ transform: 'translate3d(0px, 3px, 0px)' }}
+        className="block z-30 absolute top-0 left-0  bg-white float-left py-2 px-0 text-left border border-gray-300 rounded-sm mt-0.5 mb-0 mx-0 bg-clip-padding"
+        role="menu"
+        aria-orientation="vertical"
+        aria-labelledby="options-menu"
+      >
+        {children}
+      </div>
+    </div>
+  );
+};
+
+/* You can wrap the a tag with Link if you are using either Create-React-App, Next.js or Gatsby */
+Dropdown.Item = ({ children }) => (
+  <a
+    href="#"
+    className="block w-full py-1 px-8 mb-2 text-sm font-normal clear-both whitespace-nowrap border-0 hover:bg-gray-200 cursor-pointer"
+    role="menuitem"
   >
     {children}
-  </div>
-);
-
-Dropdown.Item = ({ children }) => (
-  <div className="block w-full py-1 px-8 mb-2 text-sm font-normal clear-both whitespace-nowrap border-0 hover:bg-gray-200 cursor-pointer">
-    {children}
-  </div>
+  </a>
 );
 ```
