--- a/packages/list-group/snippets/link.mdx
+++ b/packages/list-group/snippets/link.mdx
@@ -1,13 +1,13 @@
 ```jsx
 export const ListGroupLinkPage = () => (
   <ListGroup>
-    <ListGroup.Item className="cursor-pointer hover:bg-gray-300">
+    <ListGroup.Item className="cursor-pointer hover:bg-gray-300" href="#">
       First Item
     </ListGroup.Item>
-    <ListGroup.Item className="cursor-pointer hover:bg-gray-300">
+    <ListGroup.Item className="cursor-pointer hover:bg-gray-300" href="#">
       Second Item
     </ListGroup.Item>
-    <ListGroup.Item className="cursor-pointer hover:bg-gray-300">
+    <ListGroup.Item className="cursor-pointer hover:bg-gray-300" href="#">
       Third Item
     </ListGroup.Item>
   </ListGroup>
@@ -19,11 +19,11 @@ const ListGroup = ({ children }) => (
   </ul>
 );
 
-ListGroup.Item = ({ children, className }) => (
-  <li
+ListGroup.Item = ({ children, className, href }) => (
+  <a href={href}
     className={`${className} relative block py-3 px-5 relative -mb-px block border border-grey`}
   >
     {children}
-  </li>
+  </a>
 );
 ```
