--- a/packages/curtain-menu/snippets/top.mdx
+++ b/packages/curtain-menu/snippets/top.mdx
@@ -18,16 +18,17 @@ export const CurtainMenuPage = () => {
       </button>
       <Menu isOpen={isOpen}>
         <button
+          aria-label="Close"
           className="absolute top-3 right-3 text-5xl text-white cursor-pointer"
           onClick={toggle}
         >
           &times;
         </button>
         <Menu.Container>
-          <Menu.Item>Home</Menu.Item>
-          <Menu.Item>Contact</Menu.Item>
-          <Menu.Item>Services</Menu.Item>
-          <Menu.Item>Components</Menu.Item>
+          <Menu.Item href="#">Home</Menu.Item>
+          <Menu.Item href="#">Contact</Menu.Item>
+          <Menu.Item href="#">Services</Menu.Item>
+          <Menu.Item href="#">Components</Menu.Item>
         </Menu.Container>
       </Menu>
     </>
@@ -45,9 +46,13 @@ Menu.Container = ({ children }) => (
   <div className="relative top-1/4 w-full text-center mt-8">{children}</div>
 );
 
-Menu.Item = ({ children }) => (
+/* You can wrap the a tag with Link and pass href to Link if you are using either Create-React-App, Next.js or Gatsby */
+Menu.Item = ({ children, href }) => (
   <div className="p-2 ">
-    <a className="text-3xl text-gray-400 cursor-pointer hover:text-white">
+    <a
+      href={href}
+      className="text-3xl text-gray-400 cursor-pointer hover:text-white"
+    >
       {children}
     </a>
   </div>
