update comment on tailwind config file

--- a/website/utils/tailwindConfig.mdx
+++ b/website/utils/tailwindConfig.mdx
@@ -8,13 +8,20 @@ module.exports = {
   theme: {
     extend: {
       animation: {
-        left: 'left 0.3s' /* If you are using Toast component*/,
-        right: 'right 0.3s' /* If you are using Toast component*/,
-        'modal-right':
-          'modal-right 0.3s' /* If you are using Modal position right*/,
-        'modal-top': 'modal-top 0.3s' /* If you are using Modal position top*/,
-        'modal-left':
-          'modal-left 0.3s' /* If you are using Modal position left*/,
+        /* If you are using Toast component*/
+        left: 'left 0.3s',
+
+        /* If you are using Toast component*/
+        right: 'right 0.3s',
+
+        /* If you are using Modal position right*/
+        'modal-right': 'modal-right 0.3s',
+
+        /* If you are using Modal position top*/
+        'modal-top': 'modal-top 0.3s',
+
+        /* If you are using Modal position left*/
+        'modal-left': 'modal-left 0.3s',
       },
       keyframes: {
         /* If you are using Toast component*/
