feat: Improve Tab component accessibility
- Replace role buttton by link
- Add tabIndex to 0
- Update snippets

--- a/packages/tab/snippets/variantOne.mdx
+++ b/packages/tab/snippets/variantOne.mdx
@@ -36,7 +36,8 @@ const Tabs = ({ children }) => {
     <nav>
       {childrenArray.map((child) => (
         <div
-          role="button"
+          role="link"
+          tabIndex={0}
           onClick={() => setCurrent(child.key)}
           key={child.key}
           className={
