--- a/packages/tab/snippets/variantTwo.mdx
+++ b/packages/tab/snippets/variantTwo.mdx
@@ -42,8 +42,8 @@ const Tabs = ({ children }) => {
           key={child.key}
           className={
             current === child.key
-              ? 'inline-block py-2 px-4 border-gray-300 border-t bg-white border-b-0 border-l border-r text-blue-700'
-              : 'inline-block py-2 px-4 text-gray-800 border-b'
+              ? `${classNames.default} ${classNames.active}`
+              : `${classNames.default} ${classNames.inactive}`
           }
         >
           {child.props.title}
@@ -59,4 +59,10 @@ const Tab = ({ children, selected }) => (
     {children}
   </div>
 );
+
+const classNames = {
+  default: `py-2 px-4 inline-block focus:outline-none`,
+  active: `border-gray-300 border-t bg-white border-b-0 border-l border-r text-blue-700`,
+  inactive: `text-gray-800 border-b`,
+};
 ```
