--- a/packages/input/snippets/error.mdx
+++ b/packages/input/snippets/error.mdx
@@ -4,7 +4,7 @@ import { forwardRef } from 'react';
 export const FormPage = () => (
   <Input
     aria-required={true}
-    aria-invalid={false}
+    aria-invalid={true}
     dot={true}
     label="Password"
     name="password"
