Replace Input component by Field component
- replace all snippets and examples
- redirect from input to field page
- add guide for field component
- update tailwind config

--- a/website/utils/tailwindConfig.mdx
+++ b/website/utils/tailwindConfig.mdx
@@ -58,7 +58,8 @@ module.exports = {
   },
   variants: {
     extend: {
-      backgroundColor: ['active'],
+      backgroundColor: ['active', 'checked'],
+      inset: ['checked'],
       opacity: ['disabled'],
       textColor: ['active'],
     },
