--- a/packages/modal/snippets/right.mdx
+++ b/packages/modal/snippets/right.mdx
@@ -30,13 +30,13 @@ export const ModalPage = () => {
         <Modal.Footer>
           <button
             onClick={toggle}
-            className="text-white focus:outline-none shadow m-1.5 rounded px-6 py-2 font-medium transition ease-in duration-200 bg-red-500"
+            className="text-white focus:outline-none m-1.5 rounded px-6 py-2 font-medium bg-red-500"
           >
             Close
           </button>
           <button
             onClick={toggle}
-            className="text-white focus:outline-none shadow m-1.5 rounded px-6 py-2 font-medium transition ease-in duration-200 bg-blue-600"
+            className="text-white focus:outline-none m-1.5 rounded px-6 py-2 font-medium bg-blue-600"
           >
             Confirm
           </button>
@@ -46,10 +46,20 @@ export const ModalPage = () => {
   );
 };
 
+const style = {
+  container: `fixed top-0 left-0 z-40 w-full h-full m-0`,
+  content: `animate-modal-right relative flex flex-col bg-white pointer-events-auto`,
+  orientation: `mt-12 mx-8 md:flex md:w-96 md:h-full md:m-0 md:right-0 md:mx-0 md:my-0 md:absolute`,
+  overlay: `fixed top-0 left-0 z-40 w-screen h-screen bg-black opacity-50`,
+  header: `items-start justify-between p-4 border-b border-gray-300`,
+  headerTitle: `text-2xl md:text-3xl font-light`,
+  body: `flex-shrink flex-grow p-4`,
+  footer: `flex flex-wrap items-center justify-end p-3 border-t border-gray-300`,
+};
+
 /* Modal logic*/
 const Modal = ({ children, isOpen, toggle }) => {
   const ref = useRef();
-  const position = `mt-12 mx-8 md:flex md:w-96 md:h-full md:m-0 md:right-0 md:mx-0 md:my-0 md:absolute`;
 
   useEffect(() => {
     const handleOutsideClick = (event) => {
@@ -65,39 +75,29 @@ const Modal = ({ children, isOpen, toggle }) => {
   return (
     <Portal>
       {isOpen && (
-        <div className="container">
-          <div className="fixed top-0 left-0 z-40 w-screen h-screen bg-black opacity-50" />
-          <div className="fixed top-0 left-0 z-40 w-full h-full m-0">
+        <>
+          <div className={style.overlay} />
+          <div className={style.container}>
             <div
-              className={position}
+              className={style.orientation}
               ref={ref}
               role="dialogue"
               aria-modal={true}
             >
-              <div className="animate-modal-right relative flex flex-col bg-white pointer-events-auto">
-                {children}
-              </div>
+              <div className={style.content}>{children}</div>
             </div>
           </div>
-        </div>
+        </>
       )}
     </Portal>
   );
 };
 
 Modal.Header = ({ children }) => (
-  <div className="items-start justify-between p-4 border-b border-gray-300">
-    <h4 className="text-2xl md:text-3xl font-light">{children}</h4>
+  <div className={style.header}>
+    <h4 className={style.headerTitle}>{children}</h4>
   </div>
 );
-
-Modal.Body = ({ children }) => (
-  <div className="flex-shrink flex-grow p-4">{children}</div>
-);
-
-Modal.Footer = ({ children }) => (
-  <div className="flex flex-wrap items-center justify-end p-3 border-t border-gray-300">
-    {children}
-  </div>
-);
+Modal.Body = ({ children }) => <div className={style.body}>{children}</div>;
+Modal.Footer = ({ children }) => <div className={style.footer}>{children}</div>;
 ```
